<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lapmid.v_doc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.lapmid.v_doc.ui.gallery.GalleryFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.lapmid.v_doc.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.lapmid.v_doc.ui.tools.ToolsFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contactus" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.lapmid.v_doc.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.lapmid.v_doc.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>